--- a/ShowHtml/Index.html
+++ b/ShowHtml/Index.html
@@ -6,5 +6,11 @@
 </head>
 <body>
 <?PHP echo $wel; ?>
+<br>
+<a href="?act=login">login</a>
+<br>
+<a href="?act=regedit">regedit</a>
+<br>
+<a href="?act=main">main</a>
 </body>
 </html>
